Change speeds on all auto paths